--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0"
   },
